2022-07-09:

- Added 'RoyalRoad' to account list.
- Removed 'Movellas' from account list, as that account has been deleted.
- Updated 'Belletristica' account summary to include mention of poetry collections and 'Rooms of the Desolate'.
- Corrected several typos.
- Minor code cleanup.

2022-06-20:

- Fixed height mismatch between left & right footer blocks.

2022-06-17:

- Replaced old logo and favicon with new eye-style theme.
- Removed 'Hardlimit' from account list, as those accounts have been deleted.
- Removed excessive empty space between lines on multi-line footers.
- Fixed a typo in the cookie banner.

2022-05-06:

- Added mentions of "Hallowe'en 2018, Rewritten".
- Switched Mastodon identifier link out for head links, which will hopefully actually work.

2022-04-28:

- Added a cookie acceptance/declination banner.
- Replaced Inkitt link on the Writing page with a Belletristica link.
- Fixed broken link on the Legal page.

2022-04-26-02:

- Codeberg and GitHub pages don't like the fetch() method, it seems.

2022-04-26:

- Added 'Ko-Fi', 'Mastodon', 'Mozilla Addons', 'Telegram' and 'Wikipedia' to account list.
- Updated 'Twitter: Primary' entry to reflect my migration to Mastodon.
- Removed 'Twitter: The Records of Dr Sullivan' from account list, as the account has been deactivated.
- Fixed 'Wordsmith' not displaying in account list.
- Fixed missing link to 'Wikipedia' account and missing link to Twitch on 'Stream Archive' entry.
- Moved account entries to `accounts.json` data file.
- Added link to my Gender & Sexuality Spectrum on Identity page.
- Added an invisible link to my Mastodon account to the home page to verify with Mastodon that this website is mine.
- Fixed a typo in the 'Codeberg' account profile, and another on the Home page.
- Reduced code duplication in `toggle_children()` function of `accounts.js`.
- Removed trailing `.html` in the link to the Poetry page from the Writing page.

2022-04-19:

- Added 'Hardlimit' accounts to the Accounts page.