@@ -44,6 +44,8 @@
                         The rights to content created by Murdo Maclachlan that is not related to the code, styling or design of this website are fully withheld to Murdo Maclachlan with no exceptions. Examples of such content include but are not necessarily limited to: the written text of this website, and any content created by Murdo Maclachlan that has been embedded from other websites.
 
                         The rights to any content not created by Murdo Maclachlan, such as the logo of the <a href="https://grafeas.org">Grafeas Group</a>, are fully withheld to their respective owners. The Grafeas Group logo is used with permission from the Grafeas Group.
+
+                        Any exceptions to these licensing terms will be explicitly stated on the relevant part of the website.
                         </p>
                     </div>
                 </div>
