@@ -17,7 +17,6 @@
         <link id="theme" rel="stylesheet" href="../static/css/themes/theme_dark.css">
         <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/linux-biolinum" type="text/css"/>
         <link id="font" rel="stylesheet" href="../static/css/themes/font_serif.css">
-        <link rel="stylesheet" href="../static/css/extensions/empty.css"/>
         <link id="favicon" rel="shortcut icon" type="image/webp" href="../static/img/favicons/default.webp">
     </head>
     <body>
@@ -38,15 +37,18 @@
                 <div class="text-row">
                     <div class="text-column left-column">
                         <a class="hlink" href="#prose"><h2 id="prose">Prose</h2></a>
-                        <p>Prose writing, especially fantasy and science fiction, is my absolute favourite thing to do. In fact, I've done far more prose than poetry, but none of my work in this department is actually published. Though I've finished drafts for both a novel and a novella, written more first chapters than I care to admit, and even locally host a MediaWiki installation to organise my information, I've never got any prose to the point where I'm happy to publish it. I hope that will change as soon as possible.
+                        <p>Prose writing, especially fantasy and science fiction, is my absolute favourite thing to do. In fact, I've done far more prose than poetry, but only a tiny amount of my work is actually published.
 
-                        With that in mind, I'm currently working on a few projects. <i>Infinity's Omega</i> is the novella I mentioned, a piece of science fiction set towards the very end of the universe. I also started a low fantasy clockpunk fantasy novel called <i>The Iron City</i>, which I began writing for NaNoWriMo 2021 (which I completed!).
+                        Though I've finished drafts for both a novel and a novella, written more first chapters than I care to admit, and even locally host a MediaWiki installation to organise my information, I've only once got to the point where I'm happy to publish anything. That thing is an in-progress short story collection, <a href="https://www.royalroad.com/fiction/56312/rooms-of-the-desolate">Rooms of the Desolate</a>, published on RoyalRoad and <a href="https://belletristica.com/en/books/45781-rooms-of-the-desolate/">Belletristica</a>.
 
-                        I'm also hoping to start writing online at some point in the future, so watch these spaces:
+                        With that in mind, I'm currently working on a few longer, thus-unpublished projects. <i>Infinity's Omega</i> is the novella I mentioned, a piece of science fiction set towards the very end of the universe. I've also started a low fantasy clockpunk fantasy novel called <i>The Iron City</i>, which I began writing for NaNoWriMo 2021 (which I completed!).
+
+                        I have some writing available on these accounts:
                         </p>
                         <ul>
-                            <li><a href="https://belletristica.com/en/users/14865-murdo-maclachlan#profile">Belletristica</a></li>
-                            <li><a href="https://wordsmith.social/murdomaclachlan/">Wordsmith</a></li>
+                            <li><a href="https://belletristica.com/en/users/14865-murdo-maclachlan#profile">Belletristica</a>,</li>
+                            <li><a href="https://www.royalroad.com/profile/296119">RoyalRoad</a>,</li>
+                            <li>and <a href="https://wordsmith.social/murdomaclachlan/">Wordsmith</a>, my rarely used blog.</li>
                         </ul>
                     </div>
                     <div class="text-column">
