@@ -18,7 +18,6 @@
         <link id="theme" rel="stylesheet" href="../../static/css/themes/theme_dark.css">
         <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/linux-biolinum" type="text/css"/>
         <link id="font" rel="stylesheet" href="../../static/css/themes/font_serif.css">
-        <link rel="stylesheet" href="../../static/css/extensions/empty.css"/>
         <link id="favicon" rel="shortcut icon" type="image/webp" href="../../static/img/favicons/default.webp">
     </head>
     <body>
