@@ -1,0 +1,97 @@
+<!DOCTYPE html>
+
+<html lang="en">
+    <head>
+        <!-- Meta elements -->
+        <meta charset="utf-8">
+        <meta name="author" content="Murdo B. Maclachlan">
+        <meta
+          name="description"
+          content="List of prose by Murdo Maclachlan."
+        >
+        <meta id="prefix" content="../">
+        <link rel="me" id="mastodon-identifier" href="https://mastodon.online/@murdomaclachlan">
+        <title>Murdo Maclachlan | Prose</title>
+
+        <!-- Styling -->
+        <link id="structure" rel="stylesheet" href="../../static/css/universal.css">
+        <link id="theme" rel="stylesheet" href="../../static/css/themes/theme_dark.css">
+        <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/linux-biolinum" type="text/css"/>
+        <link id="font" rel="stylesheet" href="../../static/css/themes/font_serif.css">
+        <link rel="stylesheet" href="../../static/css/extensions/prose.css"/>
+        <link id="favicon" rel="shortcut icon" type="image/webp" href="../../static/img/favicons/default.webp">
+    </head>
+    <body>
+        <div id="header-container" class="outer-container">
+            <!-- Header will be inserted here -->
+        </div>
+        <div id="body-container" class="outer-container">
+            <main class="inner-container">
+                <div class="text-row">
+                    <div class="text-column">
+                        <h2>Prose</h2>
+                        <p>This page contains a list of prose I have published so far. At the moment, there's only one work, but I have more planned! All of my web-published prose (currently all of my published prose) is available for free at my <a href="https://belletristica.com/en/users/14865-murdo-maclachlan#profile">Belletristica</a> and <a href="https://www.royalroad.com/profile/296119">RoyalRoad</a> accounts.
+                    </div>
+                </div>
+                <div class="text-row">
+                    <div class="cover-column left-column">
+                        <a class="cover" style="margin-top: 0.5em;" onclick="window.open('https://www.royalroad.com/fiction/56312', '_blank')"><img
+                                    src="https://www.royalroadcdn.com/public/covers-large/56312-rooms-of-the-desolate.jpg"
+                                    title="The cover of 'Rooms of the Desolate'."
+                                    alt="The cover of 'Rooms of the Desolate'. A monochrome image of an office block tower with evenly spaced rows of window and wall, leading straight up across the whole image. The left half of it is in light and the right half is in shadow. Overlayed over the shadowed part, white text reads: 'Rooms of the Desolate', and below that, 'Murdo B. Maclachlan'. The text is mirrored, coloured black and blurred on the half in light."
+
+                        ></a>
+                    </div>
+                    <div class="description-column">
+                        <h2 style="margin-top: 0; margin-bottom: 0;">Rooms of the Desolate</h2>
+                        <blockquote style="margin-top: 1em; margin-right: 0em; margin-bottom: -0.5em;"
+                        >“There was plague in the Tower; hunger, hazard and strife; but the greatest killer of all was time. Where the mind held strong, as the years flew by like sand flowing to the bottom of an hourglass, the body weakened... Time always has its due, in the end.”
+                        <span style="float: right;">― <i>The Forever Tower</i>, Part 2</span>
+                        </blockquote>
+                        <p><i>Rooms of the Desolate</i> is an ongoing collection of short stories designed to guide the reader through the many rooms and mysteries of the bleak and greyscale labyrinth of the Desolate.
+
+                        The first entry, <i>The Forever Tower</i> follows an unnamed wanderer climbing an endless, colourless tower; the only world they have ever known. As they slowly ascend alongside the masses, they consider the nature of their world and look to the corridors as temptation beckons.
+
+                        Available on <a href="https://www.royalroad.com/fiction/56312/rooms-of-the-desolate">RoyalRoad</a> and <a href="https://belletristica.com/en/books/45781-rooms-of-the-desolate/">Belletristica</a>.
+
+                        <strong>Content Warning:</strong> Current entries do not include violence or profanity, but future entries may do so. The Desolate is exactly that: a desolate world; as such, it is bleak, downtrodden, and may deal with mental struggles.
+
+                        The original background image for the cover is by <a href="https://www.pexels.com/@borkography/">Adam Borkowski</a>, see <a href="https://www.pexels.com/license/">license</a>. The image was edited by me.</p>
+                    </div>
+                </div>
+            </main>
+        </div>
+
+        <!-- TEMPLATE
+        <div class="text-row">
+            <div class="cover-column left-column">
+                <a class="cover" style="" href=""><img
+                            src=""
+                            title=""
+                            alt=""
+                ></a>
+            </div>
+            <div class="description-column">
+                <h2 style=""></h2>
+                <blockquote style="margin-top: 1em; margin-right: 0em; margin-bottom: -0.5em;"
+                >“”
+                <span style="float: right;">― <i></i></span>
+                </blockquote>
+                <p><i></i>
+
+                Available on <a href="">RoyalRoad</a> and <a href="">Belletristica</a>.
+
+                <strong>Content Warning:</strong></p>
+            </div>
+        </div>
+        -->
+
+        <div id="footer-container" class="outer-container">
+            <!-- Footer will be inserted here -->
+        </div>
+        <div id="scripts">
+            <!-- Scripts (secondary scripts inserted during constructor runtime) -->
+            <script id="constructor" src="../../scripts/js/constructor.js"></script>
+        </div>
+    </body>
+</html>
