@@ -1,3 +1,11 @@
+2022-07-11:
+
+- Added 'Prose' subpage to the 'Writing' page.
+- Updated Prose section of main 'Writing' page.
+- Improved clarity of 'Legal' page.
+- Removed redundant links to obsolete CSS extension from some pages.
+- Removed commented code from universal CSS.
+
 2022-07-09:
 
 - Added 'RoyalRoad' to account list.
